--- a/requirements.txt
+++ b/requirements.txt
@@ -6,7 +6,6 @@ coreschema==0.0.4
 Django==3.2.8
 djangorestframework==3.12.4
 djangorestframework-jwt==1.11.0
-djangorestframework-simplejwt==5.0.0
 drf-yasg==1.20.0
 idna==3.3
 inflection==0.5.1
@@ -14,7 +13,6 @@ itypes==1.2.0
 Jinja2==3.0.3
 MarkupSafe==2.0.1
 packaging==21.2
-pkg_resources==0.0.0
 PyJWT==1.7.1
 pyparsing==2.4.7
 pytz==2021.3
@@ -24,3 +22,4 @@ ruamel.yaml.clib==0.2.6
 sqlparse==0.4.2
 uritemplate==4.1.1
 urllib3==1.26.7
+gunicorn==20.0.4
