--- a/.gitignore
+++ b/.gitignore
@@ -151,4 +151,7 @@ dmypy.json
 cython_debug/
 
 # End of https://www.toptal.com/developers/gitignore/api/django
+product/data.pkl
+product/recommended.dat
+
 n
