--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -8,8 +8,22 @@ services:
       - 54321:8000
     networks:
       - nginx-manager-network
+    env_file:
+      - ./env.prod
+    depends_on:
+      - db
+
+  db:
+    image: postgres:13.0-alpine
+    volumes:
+      - postgres_data:/var/lib/postgresql/data/
+    env_file:
+      - ./.env.prod.db
 
 networks:
   nginx-manager-network:
     external:
       name: nginx-manager_default
+
+volumes:
+  postgres_data:
