--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -9,7 +9,7 @@ services:
     networks:
       - nginx-manager-network
     env_file:
-      - ./env.prod
+      - ./.env.prod
     depends_on:
       - db
 
@@ -18,7 +18,7 @@ services:
     volumes:
       - postgres_data:/var/lib/postgresql/data/
     env_file:
-      - ./.env.prod.db
+      - ./.env.prod
 
 networks:
   nginx-manager-network:
