--- a/requirements.txt
+++ b/requirements.txt
@@ -20,7 +20,7 @@ requests==2.26.0
 ruamel.yaml==0.17.17
 ruamel.yaml.clib==0.2.6
 sqlparse==0.4.2
-psycopg2>=2.8
+psycopg2-binary>=2.8
 uritemplate==4.1.1
 urllib3==1.26.7
 gunicorn==20.0.4
