--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -18,7 +18,9 @@ services:
     volumes:
       - postgres_data:/var/lib/postgresql/data/
     env_file:
-      - ./.env.prod
+      - ./.env.prod.db
+    networks:
+      - nginx-manager-network
 
 networks:
   nginx-manager-network:
