--- a/requirements.txt
+++ b/requirements.txt
@@ -25,4 +25,6 @@ uritemplate==4.1.1
 urllib3==1.26.7
 gunicorn==20.0.4
 numpy==1.19.5
-tensorflow==2.6.0
+tensorflow==2.7.0
+annoy==1.17.0
+pillow==7.2.0
